# 3d-Matrix-Sukoku

./: .gitignore  ABOUT.md  CONTRIBUTING.md  QUICK_START.md  README.md  STATUS.md  deploy.sh  docker-compose.yml  index.html  index.tsx  metadata.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-updates.yml  docker-build.yml  release.yml  validate-workflows.yml
backend/cpp/: CMakeLists.txt  sudoku_solver.cpp
backend/csharp/: Program.cs  UserManagementService.csproj
backend/gateway/: package.json  server.js
backend/php/: composer.json  index.php
backend/vb/: LegacyMigration.vb  LegacyMigration.vbproj
docker/: Dockerfile.cpp  Dockerfile.csharp  Dockerfile.frontend  Dockerfile.gateway  Dockerfile.php  nginx-frontend.conf
src/: api.service.ts  app.component.html  app.component.ts  manifest.json  matrix-rain.component.ts  pwa.service.ts  sw.js
